// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UISkeleton should display correctly 1`] = `
<div
  class="h-10 w-full rounded bg-gray-250 dark:bg-gray-750 text-white dark:text-gray-600 animate-shimmer"
  style="--duration: 1300ms;"
/>
`;

exports[`UISkeleton should display correctly 2`] = `
<div
  class="h-10 w-full rounded bg-gray-250 dark:bg-gray-750 text-white dark:text-gray-600 animate-pulse"
  style="--duration: 1300ms;"
/>
`;
